Fixed: Close z-index on lightbox
git-svn-id: https://plugins.svn.wordpress.org/image-slider-widget/tags/1.0.0@1032845 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -64,3 +64,7 @@
 .lb-number {
 	/* display: none !important; */
 	}
+	
+.ewc_close {
+	z-index:9995;
+	}
